<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trace</string>
    <string name="action_settings">Settings</string>
    <string name="title_current_section">Current plan</string>
    <string name="title_latest_section">Latest plans</string>
    <string name="title_all_section">All plans</string>
    <string name="title_activity_plan_detail">Plan Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_task_detail">Task Details</string>

    <!-- LABELS -->
    <string name="label_tasks">Tasks</string>
    <string name="label_description">Description</string>
    <string name="label_name">Name</string>
    <string name="label_plan_name">Plan name</string>
    <string name="label_location">Location</string>
    <string name="label_ssid">WiFi</string>
    <string name="label_nfc">NFC-tag</string>
    <string name="label_status">Status</string>
    <string name="label_auto_register">Auto register</string>
    <string name="label_accumulated_time">Accumulated time</string>
    <string name="label_time_slots">Time slots</string>
    <string name="DUMMY_TEXT"></string>
    <string name="DUMMY_TASK_BUTTON">To task</string>
    <string name="DUMMY_PLAN_BUTTON">To plan</string>
    <string name="DUMMY_TIME_SLOT">To plan</string>
    <string name="add">Add</string>
    <string name="title_activity_task_editor">Edit Task</string>
    <string name="title_activity_plan_editor">PlanEditorActivity</string>
    <string name="edit_plan">Edit Plan</string>
    <string name="save">Save</string>
    <string name="details">Details</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="plan_was_activated">activated.</string>
    <string name="status_open">Open</string>
    <string name="status_closed">Closed</string>

    <string-array name="status_array">
        <item>Open</item>
        <item>Closed</item>
    </string-array>
    
    <string-array name="auto_select_array">
        <item>(NONE)</item>
        <item>WiFi</item>
        <item>GPS</item>
        <item>NFC</item>
    </string-array>

    <string name="select_status">Select Status</string>
    <string name="trace_wifi_reciever">Trace Wifi Receiver</string>
    <string name="label_default_task">Default task</string>
    <string name="auto_registration_method">Auto registration method</string>
    <string name="auto_select_label">Auto selection by</string>
    <string name="accumulated_time">Accumulated time:</string>
    <string name="play">Play</string>
    <string name="description_task_header_icon">Task header icon</string>
    <string name="description_default_task_marking">Default task marking</string>
    <string name="new_task">New task</string>
    <string name="default_task">Set as default task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="closing_task_close_plan">You are closing the last open task. Do you want to close the plan?</string>
	<string name="interval_saved">Interval saved</string>
	<string name="capital_task">Task</string>
	<string name="loaded">loaded</string>
	<string name="capital_plan">Plan </string>
	<string name="task_is_refreshed">Task is refreshed</string>
	<string name="task_is_set_as_default">Task is set as default</string>
	<string name="cannot_set_a_closed_task_as_default">Cannot set a closed task as default!</string>
	<string name="click_to_add_a_plan">Click + to add a Plan</string>
	<string name="overlay_description">Plans are entry-points for registering time.</string>
	<string name="task_list_overlay_header">View Plan details to add a Task</string>
	<string name="task_list_overlay_description">Tasks are used to organize registered time slots.</string>
	<string name="auto_registration">auto registration</string>
	<string name="auto_selection">auto selection</string>
	<string name="plan">Plan</string>
	<string name="is_selected">is selected</string>
	<string name="started_to_register_time_for">Started to register time for</string>
	<string name="cannot_load_a_closed_task">Cannot load a closed task</string>
	<string name="cannot_set_a_closed_plan_as_active">Cannot set a closed plan as active</string>
</resources>