<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlanDetailActivity" >

    <TableLayout
        android:id="@+id/fragmentTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <!-- First row. Contains plan name label -->
        <TableRow 
            android:id="@+id/firstRow"
            android:layout_width="match_parent">
            
            <TextView
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip" 
	        	android:text="@string/label_name"
        	/>
    		
    		<TextView
    		    android:id="@+id/plan_detail_name"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
        </TableRow>
        
        <!-- Second row. Contains plan description -->
        <TableRow 
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
            
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_description"
        	/>
            
            <TextView 
                android:id="@+id/plan_detail_description"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
        </TableRow>
        
        <!-- Third row. Contains plan location -->
        <TableRow 
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/latitude"
        	/>
            <TextView 
                android:id="@+id/plan_detail_lat"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
            
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="0dip">
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/longitude"
        	/>
            <TextView 
                android:id="@+id/plan_detail_lon"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
            
        </TableRow>
        
        <!-- Fourth row. Contains plan SSID -->
        <TableRow 
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
        <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_ssid"
        	/>
            <TextView 
                android:id="@+id/plan_detail_ssid"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
        </TableRow>
        
        <!-- Fifth row. Contains plan NFC -->
        <TableRow 
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
        <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_nfc"
        	/>
            <TextView 
                android:id="@+id/plan_detail_nfc"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
        </TableRow>
        
        <!-- Sixth row. Contains plan status -->
        <TableRow 
            android:id="@+id/sixthRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
        <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_status"
        	/>
            <TextView 
                android:id="@+id/plan_detail_status"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
        </TableRow>
        
        <!-- Seventh row. Contains plan auto setting -->
        <TableRow 
            android:id="@+id/seventhRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
        	<CheckBox
		        android:id="@+id/plan_detail_auto"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="16dp"
		        android:text="@string/label_auto_register" />
        </TableRow>
        
    </TableLayout>
    
    
    
    <!-- DUMMY BUTTON FOR NAV TESTING. LISTVIEW WILL BE POSITIONED HERE INSTEAD -->
    <Button 
        android:id="@+id/toTaskButton"
        android:layout_height="200dip"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/DUMMY_TASK_BUTTON"
        android:onClick="viewTaskDetails"/>
    
    <TextView 
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dip"
	    android:layout_above="@id/toTaskButton"
	    android:text="@string/label_tasks"/>
    <!-- ListView ></ListView-->

</RelativeLayout>
