<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TaskDetailActivity" >

    <TableLayout
        android:id="@+id/fragmentTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <!-- First row. Contains plan name label -->
        <TableRow 
            android:id="@+id/firstRow"
            android:layout_width="match_parent">
            
            <TextView
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip" 
	        	android:text="@string/label_plan_name"
        	/>
    		
    		<TextView
    		    android:id="@+id/name"
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
        </TableRow>
        
        <!-- Second row. Contains plan description -->
        <TableRow 
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
            
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_name"
        	/>
            
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
        </TableRow>
        
        <!-- Third row. Contains plan location -->
        <TableRow 
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_description"
        	/>
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
            
        </TableRow>
        
        <!-- Fourth row. Contains plan SSID -->
        <TableRow 
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
        <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_status"
        	/>
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
            
        </TableRow>
        
        <!-- Fifth row. Contains plan NFC -->
        <TableRow 
            android:id="@+id/fifthRow"
            android:layout_width="match_parent"
            android:layout_height="0dip">
        <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/label_accumulated_time"
        	/>
            <TextView 
	        	android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:padding="5dip"
	        	android:text="@string/DUMMY_TEXT"
	        />
        </TableRow>        
    </TableLayout>
    
    
    
    <!-- DUMMY BUTTON FOR NAV TESTING. LISTVIEW WILL BE POSITIONED HERE INSTEAD -->
    <View 
        android:id="@+id/intervals"
        android:layout_height="200dip"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/DUMMY_TIME_SLOT"
        android:background="@android:color/darker_gray"
        android:onClick="changeBackgroundColor"/>
    
    <TextView 
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dip"
	    android:layout_above="@id/intervals"
	    android:text="@string/label_time_slots"/>
    <!-- ListView ></ListView-->

</RelativeLayout>
