<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_current"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/current_plan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/DUMMY_TEXT"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_plan_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_plan_name"
            android:padding="5dip"
            android:text="@string/DUMMY_TEXT" />

        <ImageView
            android:id="@+id/taskIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_plan_description"
            android:contentDescription="@string/description_task_header_icon"
            android:src="@drawable/ic_action_labels_dark" />

        <TextView
            android:id="@+id/taskHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_plan_description"
            android:layout_toRightOf="@+id/taskIcon"
            android:padding="5dip"
            android:text="@string/label_tasks"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/taskHeader"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/planTasksList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskHeader"
            android:layout_marginTop="5dp" >
        </ListView>

        <RelativeLayout
            android:id="@+id/taskListOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/taskHeader">

            <TextView
                android:id="@+id/taskListOverlayHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/task_list_overlay_header"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/taskListOverlayDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/taskListOverlayHeader"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/task_list_overlay_description" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/overlayHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/click_to_add_a_plan"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/overlayDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/overlayHeader"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/overlay_description" />
    </RelativeLayout>

</RelativeLayout>