<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TaskEditorActivity" >

    		<TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/label_name" />

            <EditText
                android:id="@+id/edit_task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dip"
                android:inputType="text"
                android:padding="5dip"
                android:layout_below="@+id/name_label">

        		<requestFocus />
    		</EditText>
            
            
            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:layout_below="@+id/edit_task_name"
                android:text="@string/label_description" />

            <EditText
                android:id="@+id/edit_task_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="5dip" 
                android:layout_below="@+id/description_label"/>

            <TextView
                android:id="@+id/status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/label_status" 
                android:layout_below="@+id/edit_task_description"/>
            
            <Spinner
		        android:id="@+id/edit_task_status_spinner"
    		    android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:prompt="@string/select_status" 
        		android:layout_below="@+id/status_label"/>

</RelativeLayout>
